--- a/rmd_assignments/W6_LoopsFunctions.Rmd
+++ b/rmd_assignments/W6_LoopsFunctions.Rmd
@@ -2,9 +2,7 @@
 title: "HW6 - Loops + Functions"
 author: "Nicole Dwenger"
 date: "25/10/2020"
-output:   
-  md_document:
-    variant: gfm
+output: html_document
 ---
 
 ## Preparations
@@ -49,7 +47,7 @@ gdp_calc(data, "Denmark", 2007)
 
 ## Task 2
 **Write a script that loops over each country in the gapminder dataset, tests whether the country starts with a ‘B’ , and print out whether the life expectancy is smaller than 50, between 50 and 70, or greater than 70.**
-*Note: I was unsure whether life expectancy here means "mean life expectancy" (just like in task 3) or whether it means "one of the life expectancy values" - but I assumed the first one. 
+*Note: I was unsure whether life expectancy here means "mean life expectancy" (just like in task 3) or whether it means "one of the life expectancy values" - but I assumed the first one.* 
 
 ```{r}
 
