--- a/rmd_assignments/W4_StartWithR/W4_Assignment.Rmd
+++ b/rmd_assignments/W4_StartWithR/W4_Assignment.Rmd
@@ -1,8 +1,9 @@
 ---
 title: 'W4: Start with R'
-output:   
-  md_document:
-    variant: markdown_github
+# output:   
+#   md_document:
+#     variant: markdown_github
+output: pdf_document
 ---
 
 ## Exercise 1: 
